// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should rander ExpenseSummary with 1 expense totalling $1.95 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense 
    totalling 
    $1.95
  </h1>
</div>
`;

exports[`should render ExpenseSummary with 0 expenses totalling $0.00 1`] = `
<div>
  <h1>
    Viewing 
    0
     expenses 
    totalling 
    $0.00
  </h1>
</div>
`;
